Fix some spacing.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ footer {
 header {
   background-color: rgb(54, 172, 38);
   text-align: center;
-  margin: 8px 8px 16px 8px;
+  margin: 8px;
   border-radius: 8px;
 }
 
